# chat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
client_gui/: Cargo.toml  README.md
client_gui/src/: listen.rs  main.rs  messages.rs  style.rs
client_term/: Cargo.toml  README.md
client_term/src/: main.rs
iced_mpsc/: Cargo.toml  README.md
iced_mpsc/examples/: button.rs
iced_mpsc/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: lib.rs  listen.rs
