[package]
name = "chat-rs"
version = "1.0.1"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6"
rand_core = { version = "0.5", features = ["getrandom"] }
k256 = { version = "0.5", features = ["ecdh"] }
hkdf = "0.10"
sha2 = "0.9"
anyhow = "1.0"
tokio = { version = "0.3", features = ["net", "io-util"] }
async-trait = "0.1"