[package]
name = "chat-rs"
version = "2.0.0"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
aes = "0.6"
rand_core = { version = "0.5", features = ["getrandom"] }
k256 = { version = "0.5", features = ["ecdh"] }
hkdf = "0.10"
sha2 = "0.9"
anyhow = "1.0"
tokio = { version = "1.26", features = ["net", "io-util"] }
async-trait = "0.1"

[dev-dependencies.tokio]
version = "1.26"
features = ["net", "macros", "rt", "rt-multi-thread"]
