[package]
name = "chat-rs"
version = "2.1.0"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
k256 = { version = "0.13", features = ["ecdh"] }
sha2 = "0.10"
anyhow = "1.0"
tokio = { version = "1.26", features = ["net", "io-util"] }
async-trait = "0.1"

[dev-dependencies.tokio]
version = "1.26"
features = ["net", "macros", "rt", "rt-multi-thread"]
