[package]
name = "client_gui"
version = "0.1.0"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
iced = { version = "0.2", features = ["tokio", "glow"] }
iced_futures = "0.2"
chat-rs = { path="../" }

[dependencies.tokio]
version = "0.3"
features = ["net", "sync", "rt", "rt-multi-thread"]