[package]
name = "client_gui"
version = "0.1.1"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
iced = { version = "0.4", features = ["tokio", "glow"] }
iced_futures = "0.4"
chat-rs = { path = "../" }

[dependencies.tokio]
version = "1.26"
features = ["net", "sync", "rt", "rt-multi-thread"]
