[package]
name = "client_term"
version = "0.1.0"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
chat-rs = { path="../" }

[dependencies.tokio]
version = "0.3"
features = ["net", "rt", "rt-multi-thread", "macros"]