[package]
name = "server"
version = "0.1.0"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
ctrlc = "3.1"
chat-rs = { path = "../" }

[dependencies.tokio]
version = "0.3"
features = ["net", "sync", "rt", "rt-multi-thread"]