[package]
name = "server"
version = "0.1.1"
authors = ["boolean_coercion <booleancoercion@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.8"
ctrlc = "3.1"
chat-rs = { path = "../" }

[dependencies.tokio]
version = "1.26"
features = ["net", "sync", "rt", "rt-multi-thread", "macros", "io-util"]
